@@ -185,6 +185,9 @@
 	<li>Borders around left and right-aligned images were
 	not drawn properly (PR #5112)</li>
 
+	<li>Grayscale PDF output was not truly grayscale (STR
+	#32)</li>
+
 </UL>
 
 <H2>Changes in HTMLDOC v1.8.23</H2>
