@@ -128,6 +128,7 @@ CHANGES IN HTMLDOC v1.8.24
 	  correctly nest the lists in the parent items (STR #10)
 	- Borders around left and right-aligned images were not
 	  drawn properly (PR #5112)
+	- Grayscale PDF output was not truly grayscale (STR #32)
 
 
 CHANGES IN HTMLDOC v1.8.23
